# qr-factory

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: ev_base.yaml  exp_ema_50_200.yaml  exp_ema_50_200_nolimit.yaml  exp_sma_10_30_adx_nolimit.yaml  exp_sma_50_200_nolimit.yaml  ma_crossover.yaml  week1_base.yaml
data/: DATA_VERSION.md  README.md
data/20260217_030324/: META.json  XAUUSD_M5_2016.csv  XAUUSD_M5_2017.csv  XAUUSD_M5_2026.csv
data/loader/: __init__.py  __main__.py  _config.py  _csv_writer.py  _loader.py
notes/: ev_sim_results.json  week1_ev_expectancy.md
runs/20260218_021702/: README.md  config.yaml  metrics.json
runs/20260218_021755/: README.md  metrics.json
runs/20260219_020202/: README.md  metrics.json
scripts/: run_ev_sim.py  run_experiments.py
src/: README.md  __init__.py  __main__.py
src/engine/: __init__.py  core.py  git_info.py  runner.py
src/ev/: __init__.py  simulator.py
src/execution/: __init__.py  models.py
src/indicators/: README.md  __init__.py
src/loader/: __init__.py  _loader.py  _mt5_source.py  _protocols.py  _version_log.py
src/replay/: __init__.py  bar_iterator.py  validation.py
src/reporting/: __init__.py  plots.py
src/risk/: __init__.py  drawdown.py  risk_manager.py
tests/: README.md  test_adx.py  test_adx_filtered_strategy.py  test_drawdown_correctness.py  test_ema.py  test_feature_pipeline.py  test_ma_crossover_backtest_smoke.py  test_ma_crossover_strategy.py  test_replay_determinism.py  test_risk_guard.py  test_risk_manager.py  test_strategy_registry.py  test_validate_bars.py
(+13 files in other folders)
