[project]
name = "qr-factory"
version = "0.1.0"
description = "Quantitative research factory – MT5 data pipeline & backtesting toolkit"
requires-python = ">=3.12"
dependencies = [
    "MetaTrader5>=5.0.45",
    "pandas>=2.2",
]

[project.scripts]
qr-loader = "data.loader._loader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data"]
