[project]
name = "qr-factory"
version = "0.1.0"
description = "Quantitative research factory – MT5 data pipeline & backtesting toolkit"
requires-python = ">=3.12"
dependencies = [
    "MetaTrader5>=5.0.45",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
]

[project.scripts]
loader = "src.loader._loader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
